--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -2,8 +2,8 @@
 {% load i18n cyclope_utils%}
 
 {% block content %}
-<div id='advanced_sarch' class='user_input'>
-    <h6>{% trans "Advanced search" %}</h6>
+<div id='advanced_search' class='user_input'>
+    <h6 class="hiper-titles">{% trans "Advanced search" %}</h6>
 
     <form method="get" action=".">
         {{ form }}
