--- a/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
@@ -17,5 +17,5 @@
   {% endif%}
 
   {% if category.collection.visible %}
-  <div class="category_title"><a href="{% url category-default category.slug %}">{{ category.name }}</a></div>
+  <div class="category_title"><h6 class="hiper-titles"><a href="{% url category-default category.slug %}">{{ category.name }}</a></h6></div>
   {% endif %}
