--- a/cyclope/media/themes/neutrona/css/neutrona.css
+++ b/cyclope/media/themes/neutrona/css/neutrona.css
@@ -21,7 +21,8 @@ img {border:none;}
 .clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0}
 * html .clearfix,*:first-child+html .clearfix{zoom:1}
 #categories_navigation {display:none;} /*borra la categoria del bloque*/
-h6.hiper-titles {border-left:6px solid #ddd;background-color:#eee;font-weight:700;color:#666;font-size:1.5em;padding:10px 25px;margin:15px 0 25px;display:block;}
+h6.hiper-titles {border-left:6px solid #ddd;background-color:#eee;font-weight:700;color:#666;font-size:1.5em;padding:10px 25px;margin:0 0 25px;display:block;} /*define el estilo de titulares teaser_list, site_map y contact*/
+.container {margin:15px 10px 15px 15px;} /*define el margen de contenidos fuego/*
 
 /*-----------------------------------------------------------------------------------------------
 ESQUELETO GENERAL
@@ -35,9 +36,9 @@ ESQUELETO GENERAL
 #medianera {overflow:auto;background:#fff;} 
 .two_sidebars #content_container {margin-right: 240px;}
 
-.searchbox form {margin:0 7px;padding:0;}
-.searchbox input {padding:3px 0;margin:7px 0 1px 0;border:1px solid #999;color:#333;width:138px;}
-.searchbox input.submit {border:none;padding:3px 0;margin:0 0 0 0;width:32px;height:32px;background:url(../images/css/btn.png) no-repeat;}
+.searchbox form {margin:0 15px 0 0;padding:5px;float:right;}
+.searchbox input {padding:5px 3px;margin:0 0 1px 0;border:1px solid #000;color:#000;width:128px;background:#fff;font-size:0.75em}
+.searchbox input.submit {border:none;padding:3px 0;margin:0 0 0 0;width:25px;height:25px;background:url(../images/css/btn.png) no-repeat;}
 .pagination {padding:0 10px 0 5px;margin:0 10px;} 
 
 /*-----------------------------------------------------------------------------------------------
@@ -57,7 +58,7 @@ AIRE
 #aire h1 a {color:#fff; text-decoration:none;}
 #aire h2 {font-size:1.1em;font-weight:400;}
 #aire h2 a {color:#ccc; text-decoration:none;}
-#aire div {padding:5px 70px 0 15px;text-align:left;color:#fff;font-size:0.85em;} 
+#aire div {padding:5px 0 0 15px;text-align:left;color:#fff;font-size:0.85em;} 
 
 /*-----------------------------------------------------------------------------------------------
 TIERRA
@@ -78,9 +79,9 @@ TIERRA
 #tierra .banners {display:block;padding:0;margin:15px auto;width:94px}
 #tierra .banners img {margin:0 auto 4px auto;text-align:center;} 
 
-.rss {padding:0 0 8px 20px;margin:15px 0 12px 20px;background: url("../images/css/rss_logo.png") 0 3px no-repeat;}
-.rss a {color:#999;text-decoration:none;font-weight:bold;}
-.rss a:hover {	text-decoration:underline;}
+#rss {width:140px;margin:20px auto;display:block;padding:0 0 8px 20px;background: url("../images/css/rss_logo.png") 0 3px no-repeat;}
+#rss a {color:#999;text-decoration:none;font-weight:bold;}
+#rss a:hover {color:#000;text-decoration:underline;}
 
 #tags {width:190px; margin:20px 10px;}
 #tags .title {text-align:center;display:block;color:#333; font-weight:bold; font-size:0.8em; margin:0;padding:3px 0;background-color:#ccc;}
@@ -96,36 +97,38 @@ TIERRA
 /*-----------------------------------------------------------------------------------------------
 FUEGO
 -----------------------------------------------------------------------------------------------*/
-#fuego {padding:10px 0 0;}
 #fuego h2 {color:#333;padding:0;margin-top:4px; margin:0; border:none;font-size:1.6em;} 
 #fuego h2 a {color:#000; text-decoration:none;}
 #fuego h2 a:hover {color:#666;text-decoration:underline;}
 #fuego p {font-size:0.9em;font-weight:400;padding:10px 0;color:#333;display:inline;display:block;}
 #fuego p a {color:#666;text-decorat6ion:underline;}
-#fuego span {font-size:0.85em;marg6in:0 0 10px;font-weight:400;color:#666;display:inline;}
-#fuego span a {margin:0 0 12px;font-weight:700;color:#000;} 
-#fuego .content-view {border-bottom:6px solid #eee;margin:0 10px 15px 15px;padding:0;overflow: auto;}
+#fuego .summary {font-weight:400;padding:10px 0;font-size: 0.9em;color: #333333;}
+#fuego .summary a {text-decoration:underline;} 
+#fuego .author {font-size: 0.8em;margin:0 0 12px;font-weight: 700;color: #000000;}
+#fuego .author a {margin:0 0 12px;font-weight:700;color:#000;} 
+#fuego .content-view {border-bottom:6px solid #eee;margin:0 0 15px 0;padding:0;overflow: auto;}
+#fuego .pretitle, #fuego .date {font-size: 0.65em;text-transform: uppercase;margin:0 0 5px;color: #666666;display: inline;}
 #fuego .links {margin:0 0 15px;}
 #fuego ul {font-size:0.9em;padding:0;margin:0; }
 #fuego li {display:inline;margin:0 5px 10px 0;padding:0}
 #fuego li a {list-style:square;margin:0;padding:0;text-decoration:none;}
 #fuego li a:hover {text-decoration:underline;} 
-#fuego .article.teaser img {float:right;margin: 4px 0 9px 0;height:135px;clear:both;border:1px solid #ccc;padding:3px;background:#eee;}
+#fuego .article.teaser img {float:right;margin: 4px 0 9px 15px;height:135px;clear:both;border:1px solid #ccc;padding:3px;background:#eee;}
 #fuego h2 img {display:none;}
 #fuego .article.teaser {}
 #fuego .article.teaser h4 {font-size:0.8em; padding:5px 0 0;font-weight:700;color:#666; margin-right:15px; display:inline;}
 #fuego .article.teaser h6 {font-size:0.65em;color:#666;font-weight:normal;text-transform:uppercase;margin-bottom:px;}
 /*.article.teaser img{padding:3px; background-color:#eee; border:1px solid #ccc;margin:3px 0 6px 15px; float:right;}*/
-#fuego .summary {font-weight:400;padding:10px 0;font-size: 0.9em;color: #333333;} 
+
 
 /*-----------------------------------------------------------------------------------------------
 AGUA
 -----------------------------------------------------------------------------------------------*/
-#agua {width:190px;}
+#agua {width:190px;margin-top:12px;}
 #agua .top {height:12px;background: url(../images/css/agua-top.png) 0 0 no-repeat;}
 #agua .content {background:url(../images/css/agua-content.png) repeat-y;padding:0 9px;} 
 #agua .bottom {height:12px;background: url(../images/css/agua-bottom.png) 0 0 no-repeat;}
-#agua .pretitle, .date {font-size:0.6em;}
+#agua .pretitle, #agua .date {font-size:0.6em;}
 #agua h2 {font-size:1em;}
 #agua .summary {font-size:0.8em;font-weight:400;margin:0 0 10px; padding: 0;}
 #agua .author {font-size:0.8em;font-weight:400;margin:0 0 10px; padding: 0;}
@@ -152,7 +155,7 @@ span.breadcrumb a:hover {color:#333;}
 /*-----------------------------------------------------------------------------------------------
 TITULOS GLOBALES (indice, mapa, contacto, busqueda)
 -----------------------------------------------------------------------------------------------*/
-.category_title {border-left:6px solid #ddd;background-color:#eee;font-weight:700;color:#666;font-size:1.5em;padding:10px 25px;margin:0 0 25px;display:block;}
+
 
 #right_sidebar_container .box {padding:0 30px 0 20px;margin:0;background:url(../images/css/secundaria-content.png) repeat-y;}
 #right_sidebar_container .top {height:25px;padding:0 20px;background:url(../images/css/secundaria-top.png) no-repeat;} 
@@ -166,8 +169,8 @@ TITULOS GLOBALES (indice, mapa, contacto, busqueda)
 VISTA ARTICULO 
 -----------------------------------------------------------------------------------------------*/
 
-#fuego-content .content-view {border-bottom:6px solid #eee;margin:0 10px 15px;overflow: auto;}
-#fuego-content p {font-size: 1em;margin:0 0 20px 0;} 
+#fuego-content .content-view {border-bottom:6px solid #eee;overflow:auto;}
+#fuego-content .html-text {font-size: 0.9em;margin:0 0 20px 0;} 
 #fuego-content .author {display:block;margin:0 0 25px 0;padding:0;color: #666666;font-size:0.8em;}
 #fuego-content .texto {font-size: 0.9em;padding:0;} 
 #fuego-content .texto ul {padding:0;margin:0 0 0 30px;list-style:square;} 
@@ -180,8 +183,14 @@ VISTA ARTICULO
 #fuego-content .related_contents li {color: #999;padding:0 10px 5px 0;margin:0 0 0 20px;}	
 #fuego-content .related_contents li a {font-size:0.8em;color:#666;font-weight:400;}
 #fuego-content .related_contents li a:hover {color:#000;font-weight:700;}
-#fuego-content .article-teaser img {float:right;margin: 4px 0 9px 0;height:135px;clear:both;border:1px solid #ccc;padding:3px;background:#eee;}
+#fuego-content .article-teaser {margin: 4px 0 20px 0;clear:both;padding:3px 0;}
+#fuego-content h2 {margin:0;padding:0}
+#fuego-content h2 a {margin:0;padding:0;color:#000;}
 #fuego-content h2 img {display:none;}
+#fuego-content .pretitle, #fuego-content .date {font-size: 0.65em;text-transform: uppercase;margin:0 0 5px;color: #666666;display: inline;}
+#fuego-content .summary {padding:10px 0;font-size: 1em;color: #333333;}
+#fuego-content .article-teaser img {float:right;margin: 4px 0 9px 15px;height:135px;clear:both;border:1px solid #ccc;padding:3px;background:#eee;}
+#fuego-content .author {display: block;font-size: 0.8em;margin:0 0 12px;font-weight:700;color: #000;}
 #socialnetworks {font-size:0.75em;display:block;padding:0 0 10px;border-top:2px solid #eee;text-align:right;clear:both;}
 #socialnetworks img {width:24px;height:24px;margin:5px 3px -8px 0;padding:6px 0 0;border:none;clear:none;}
 #socialnetworks small {margin:0;padding:5px 5px 0 0;color:#666;text-align:right;}  
@@ -240,7 +249,7 @@ VISTA ARTICULO
 CONTACTO
 -----------------------------------------------------------------------------------------------*/
 
-#contact {padding:0 10px 20px;margin:0;}
+#contact {}
 #contact form {text-align:left;padding:0;margin:0;}
 #contact p {margin:0;padding:0 20px 0 0;float:left;}
 #contact input {width:245px;padding:4px;margin:0 0 5px;color:#333;display: block;}
@@ -255,13 +264,28 @@ CONTACTO
 /*-----------------------------------------------------------------------------------------------
 MAPA
 -----------------------------------------------------------------------------------------------*/
-#map {padding:0 10px 20px;margin:0;}
+#map {}
 #map ul {list-style:none;margin:0 0 10px 30px;padding:0;}
 #map ul li {background: transparent url(../images/css/carpeta-abierta.png) 0% 3px no-repeat;padding:0 0 10px 15px;margin:5px 0 0 15px;font-weight:700;font-size:1em;}
 #map ul li ul {margin:10px 0 0;}
 #map li li {background: transparent url(../images/css/carpeta.png) 0% 3px no-repeat;padding:0 0 10px 15px;;margin:5px 0 0 15px;}
 #map ul li ul li {margin:0;padding:0 0 0 15px;font-weight:400;}
 
+/*-----------------------------------------------------------------------------------------------
+BUSQUEDA
+-----------------------------------------------------------------------------------------------*/
+#advanced_search {margin:0 0 20px;}
+#advanced_search  ul {list-style:none;margin:10px 0;padding:0;}
+#advanced_search  ul li {padding:0 0 10px 0;margin:0;font-size:0.85em;display:inline;}
+#advanced_search  ul li ul {margin:10px 0 0;}
+#advanced_search  li li {padding:0 0 10px 15px;;margin:5px 0 0 15px;}
+#advanced_search  ul li ul li {margin:0;padding:0 0 0 15px;font-weight:400;}
+#advanced_search form {border-bottom:6px solid #eee;}
+#advanced_search label {display:block;font-size:0.9em;font-weight:700;}
+#advanced_search li label {font-weight:400;}
+#advanced_search .submit {margin:0 0 20px;}
+#search_results h3 {font-size:0.9em;font-weight:700;border:1px solid #ccc;background:#eee;padding:4px;text-align:center;margin:0 0 20px;}
+#id_q {margin:0 0 10px;border:1px solid #999;padding:4px;width:350px;}
 
 /*-----------------------------------------------------------------------------------------------
 FOOTER
