--- a/cyclope/templates/cyclope/site_map.html
+++ b/cyclope/templates/cyclope/site_map.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="map" class="content-view site map site-map">
-<h6 class="hiper-titles">{% trans 'Site map' %}</h6>
+<h6 class="hiper-titles">Mapa del sitio</h6>
   <div class="menus-map">
     <ul>
       {{ menus|unordered_list }}
