--- a/cyclope/templates/cyclope/themes/neutrona/one_sidebar.html
+++ b/cyclope/templates/cyclope/themes/neutrona/one_sidebar.html
@@ -8,7 +8,9 @@
 
 <div id="fuego-content" class="grid_19">
   {% region 'before_content' %}
+  <div class="container">
   {% block content %} {% endblock %}
+  </div>
   {% region 'after_content' %}
 </div>
 
