--- a/cyclope/templates/cyclope/themes/neutrona/two_sidebars.html
+++ b/cyclope/templates/cyclope/themes/neutrona/two_sidebars.html
@@ -8,7 +8,9 @@
 
 <div id="fuego" class="grid_14">
     {% region 'before_content' %}
+    <div class="container">
     {% block content %}{% endblock %}
+    </div>
     {% region 'after_content' %}
 </div>
 
