made change_list categories filter collapsible

--- a/cyclope/templates/admin/change_list.html
+++ b/cyclope/templates/admin/change_list.html
@@ -22,6 +22,23 @@
 {% block extrahead %}
 {{ block.super }}
 {{ media.js }}
+
+{# little script to expand and collapse category filters #}
+{# TODO(nicoechaniz): put this in a js file that loads only for BaseContent models #}
+<script type="text/javascript">
+jQuery(document).ready(function(){
+  $('.expand_collapse').css('cursor', 'pointer');
+  $('#changelist-filter ul').css('display', 'none');
+  $('#changelist-filter ul').first().css('display', 'block');
+  $('#changelist-filter .selected').parent().css('display', 'block');
+  $('#changelist-filter .expand_collapse').click(function() {
+    $(this).parent().children('ul').toggle();
+    return false;
+  });
+});
+</script>
+
+
 {% if action_form %}{% if actions_on_top or actions_on_bottom %}
 <script type="text/javascript">
 (function($) {
