--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -94,15 +94,15 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
 -->
           <!-- /descargas -->
 
-  <div><span class="html-text html-content">00
+  <div><span class="html-text html-content">
     {% if CYCLOPE_ARTICLE_TEXT_STYLE == 'raw' or CYCLOPE_ARTICLE_TEXT_STYLE == 'wysiwyg'%}
-      {{ article|parsed_gettext:"text"|safe }}aa
+      {{ article|parsed_gettext:"text"|safe }}
     {% else %}
         {% if CYCLOPE_ARTICLE_TEXT_STYLE == 'textile' %}
-        {{ article.text|textile }}bb
+        {{ article.text|textile }}
         {% else %}
           {% if CYCLOPE_ARTICLE_TEXT_STYLE == 'markdown'%}
-          {{ article.text|markdown }}cc
+          {{ article.text|markdown }}
           {% endif %}
         {% endif %}
     {% endif %}
