--- a/cyclope/core/collections/templates/collections/category_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/category_teaser_list.html
@@ -1,25 +1,41 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils %}
+{% load i18n cyclope_utils fb_versions %}
 
 {% block content %}
 
 {% include 'collections/hierarchycal_navigation_block.html' %}
 
+{% if category.image %}
+<img class="category_image" src="{% version category.image.path 'small' %}" border="0"/>
+{% endif %}
+
+{% if category.description %}
+<div class="category_description text">
+  {{ category.description|safe }}
+</div>
+{% endif %}
+
   {% comment %}
-  We show a teaser view of every object belonging to this category.
+  The content of this view is composed by including a template for each content in the category
+  The included template may be something different from a teaser
   {% endcomment %}
 
   {% for categorization in categorizations %}
-    {% join categorization.content_type.app_label  "/" categorization.content_type.model "_teaser.html" as template_path %}
+    {% join categorization.content_type.app_label  "/" categorization.content_type.model "_" inline_view_name ".html" as template_path %}
 
     {% comment %}
       we alias the actual object with the model name
       so the included template is reusable
       and can access the content object using an explicit name
     {% endcomment %}
-
     {% alias categorization.content_object as categorization.content_type.model %}
+
+    {% comment %}
+      we also alias as 'media' because some medialibrary templates expect this name
+    {% endcomment %}
+    {% alias categorization.content_object as 'media' %}
+
     {% include template_path %}
   {% endfor %}
 
