commented out social network links from templates until they are properly implemented

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -122,16 +122,16 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
 
 
 	      <div class="clear"></div>
-     <!-- redsocial -->
+     <!-- redsocial #TODO: commented until fixed
            <div id="socialnetworks" class="socialnetworks">{% trans "Share in your social networks"%}:
 <a href="http://www.facebook.com" rel="nofollow" onclick="sbs_facebook(); return false;"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/redsocial/facebook.png" border="0" alt="Compartir en Facebook" title="Compartir en Facebook" height="24" width="24" /></a>
 <a href="http://www.del.icio.us" rel="nofollow" onclick="sbs_delicious(); return false;"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/redsocial/delicious.png" border="0" alt="Compartir en Delicious" title="Compartir en Delicious" height="24" width="24" /></a>
 <a href="http://www.yahoo.com" rel="nofollow" onclick="sbs_yahoobm(); return false;"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/redsocial/yahoo.png" border="0" alt="Compartir en Yahoo" title="Compartir en Yahoo" height="24" width="24" /></a>
 <a href="http://www.google.com" rel="nofollow" onclick="sbs_googlebm(); return false;"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/redsocial/google.png" border="0" alt="Compartir en Google" title="Compartir en Google" height="24" width="24" /></a>
   	</div>
-          <!-- /redsocial -->
 
             <div class="clear"></div>
+          /redsocial -->
 
   <hr>
 
