added an opening div that was missing in collection_root_categories_teaser_list.html template

--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -3,7 +3,7 @@
 {% load i18n cyclope_utils tagging_tags fb_versions markup %}
 
 {% block content %}
-
+  <div>
     {% include 'collections/collection_info.html' %}
 
     {% for category in categories %}
