--- a/cyclope/core/collections/templates/collections/collection_all_items_alphabetical_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_all_items_alphabetical_teaser_list.html
@@ -6,19 +6,10 @@
 
   {% include 'collections/collection_info.html' %}
 
-  {% if page %}
-    {% for p in page.paginator.pages %}
-      {% if p == page %}
-          <span class="selected">{{page}}</span>
-      {% else %}
-        <a href="?{% if query %}q={{ query }}&amp;{% endif %}page={{ p.number }}">{{p}}</a>
-      {% endif %}
-      {% if not forloop.last %}|{% endif %}
-    {% endfor %}
-  {% endif %}
+  {% include 'cyclope/alphabetical_pagination_block.html' %}
 
   {% comment %}
-  We show a teaser view of every object belonging to this category.
+  We show a teaser view of every object belonging to this collection.
   {% endcomment %}
 
   {% for object in object_list %}
