--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -7,10 +7,55 @@
 {{ media }}
 <script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/reuse_django_jquery.js"></script>
 <script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/jquery.chainedSelect.js"></script>
-
 {% endblock %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
+<style>
+#collection-tabs-container {
+    border-bottom: 6px #abd solid; 
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+#collection-tabs-list a{
+    color: #557;
+}
+
+#collection-tabs-list {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+.tab, .current-tab {
+    background-color: white;
+    border-top: 3px white solid;
+    border-left: 3px white solid;
+    border-right: 3px white solid;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+    position: relative;
+    padding: 5px 8px;
+    margin-left: 5px;
+    border-left: 1px #abd solid;
+    border-right: 1px #abd solid;
+    border-top: 1px #abd solid;
+}
+
+.tab:hover, .current-tab{
+    background-color: #abd;
+    color: #446;
+} 
+
+#collection-tabs-list li:hover a,
+#collection-tabs-list li.current-tab a{
+    color: white;
+} 
+
+
+</style>
+{% endblock %}
 
 {% block coltype %}{% if ordered_objects %}colMS{% else %}colM{% endif %}{% endblock %}
 
@@ -214,6 +259,64 @@ jQuery(document).ready(function($){
 
 {# JavaScript for prepopulated fields #}
 {% prepopulated_fields_js %}
+
+{# TODO(nicoechaniz): the collection tabs code is messy. needs lots of love but it works... #}
+<script type="text/javascript">
+
+var current_collection = null;
+
+jQuery(document).ready(function($){
+    var select_collection = function (collection){
+        $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']")
+            .each(function(){
+                if (this.value != collection){
+                    $(this).closest('.inline-related').hide();
+                }
+                else{
+                    $(this).closest('.inline-related').show()
+                }
+            });
+        current_collection = collection;
+        
+        $('li[id^=id_collections-tab-]').each(function(i){
+            $(this).removeClass('current-tab')
+        });
+
+        $('#id_collections-tab-'+ collection).addClass('current-tab');
+    }
+
+    var initial = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']").val();
+    $('#collections-categorization-content_type-object_id-group h2').after('<div id="collection-tabs-container"><ul id="collection-tabs-list"></ul></div>');
+
+    $('#id_collections-categorization-content_type-object_id-__prefix__-collection option')
+        .each(function(i){
+            if (this.text.match(/-+/g) != this.text){
+                var collection = this.value
+                var link_id = "id_collections-tab-"+ collection //$(this).parent().attr('id')
+                $('#collection-tabs-list').append('<li class="tab" id="'+link_id+'"><a href="javascript:void(0)" >'+this.text+'</a></li>');
+//                $('#collections-categorization-content_type-object_id-group h2').after('<span class="collection-tab" ><a href="javascript:void(0)" id="'+link_id+'" >'+this.text+'</a></span>');
+                
+                $("#"+link_id).click(function(){
+                    select_collection(collection);
+                });
+            }
+        });
+
+
+    $('#collections-categorization-content_type-object_id-group > .add-row a')
+        .click(function(){
+            i = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']").length - 2
+            sel = '#id_collections-categorization-content_type-object_id-'+i+'-collection' 
+            $(sel).val(current_collection);
+            select_collection(current_collection);
+            $(sel).change();
+        });
+
+    select_collection(initial);
+
+})
+
+</script>
 
 </div>
 </form></div>
