fixed collection_categories_json. made collection invisible in tabbed categorizations

--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
-<style>
+<style type="text/css">
 #collection-tabs-container {
     border-bottom: 6px #abd solid;
     padding-bottom: 0px;
@@ -295,9 +295,10 @@ jQuery(document).ready(function($){
 {# TODO(nicoechaniz): the collection tabs code is messy. needs lots of love but it works... #}
 <script type="text/javascript">
 
-var current_collection = null;
-
 jQuery(document).ready(function($){
+
+    var current_collection = null;
+
     var select_collection = function (collection){
         $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']")
             .each(function(){
@@ -334,7 +335,6 @@ jQuery(document).ready(function($){
             }
         });
 
-
     $('#collections-categorization-content_type-object_id-group > .add-row a')
         .click(function(){
             i = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']").length - 2
@@ -342,9 +342,12 @@ jQuery(document).ready(function($){
             $(sel).val(current_collection);
             select_collection(current_collection);
             $(sel).change();
+            $(sel).parents(".collection").hide();
         });
 
     select_collection(initial);
+
+    $(".dynamic-collections-categorization-content_type-object_id .collection").hide();
 
 })
 
