Moved view_options from fronten_view instance attribute to get_response.

--- a/cyclope/apps/contacts/templates/contacts/contact_teaser_list.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_teaser_list.html
@@ -5,7 +5,9 @@
 
 {% block content %}
 
-  {% for contact in object_list %}
+  {% include 'cyclope/alphabetical_pagination_block.html' %}
+
+  {% for contact in contacts %}
 
     {% include "contacts/contact_teaser.html" %}
   {% endfor %}
